manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: multi-repo2
  namespace: test
  labels:
    app: multi-repo2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-repo2
  template:
    metadata:
      labels:
        app: multi-repo2
    spec:
      containers:
      - name: zachtest 
        image: senzakstest.azurecr.io/zachtestmultirepo2:latest
        ports:
        - containerPort: 3000
