manifests/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-repo2-service
  namespace: test
spec:
  type: LoadBalancer
  ports:
  - port: 80 
    targetPort: 3000
  selector:
    app: multi-repo2
