manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-repo2
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 3001
      name: http
  selector:
    app: multi-repo2
