manifests/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-repo2
  namespace: test
spec:
  hosts:
  - "test.lifebooster.ca"
  gateways:
  - test-gateway
  http:
  - name: "multi-repo2-routes"
    match:
    - uri:
        prefix: /multi-repo2
    route:
    - destination:
        host: multi-repo2.test.svc.cluster.local
        port: 
          number: 3000
